Rating-item overflow on small sizes Fixes #4585

--- a/packages/survey-creator-core/src/components/question-rating.scss
+++ b/packages/survey-creator-core/src/components/question-rating.scss
@@ -20,6 +20,25 @@
   .sd-rating {
     margin-inline-start: calcSize(9); // margin-left
     width: calc(100% - 9 * #{$base-unit});
+
+    &.sd-rating--wrappable fieldset {
+      min-width: 0;
+    }
+
+    
+    .sd-rating__item-text {
+      max-width: 100%;
+      .sv-string-editor:focus-within {
+        white-space: nowrap;
+      }
+    }
+    .svc-string-editor__content {
+      width: 100%;
+      .sv-string-editor {
+        text-overflow: ellipsis;
+        overflow: hidden;
+      }
+    }
   }
     .sd-question--table .sd-rating {
       margin-inline-start: 0;
